--- a/works/20130405-1033.markdown
+++ b/works/20130405-1033.markdown
@@ -1,6 +1,6 @@
 Title: 20130405-1033PM
 Date: Friday, April 5, 2013 22:05:32 GMT
-Keywords: website
+Keywords: website, experiment
 
 For _Revelation Group_
 
