--- a/works/0p3nr3p0.markdown
+++ b/works/0p3nr3p0.markdown
@@ -15,6 +15,6 @@ The GLI.TC/H 0P3NR3P0 is an open/public repository of glitch art worx. It's a mo
 * <span class="fontawesome-map-marker"></span> _Open call begins 8th May_ [0p3nr3p0](/work/0p3nr3p0) will be used for ***Glitch Moment/ums*** [*More information*](http://www.furtherfield.org/programmes/exhibition/glitch-momentums)
 * <span class="fontawesome-map-marker"></span> **Tue, Mar 19, 2013** [0p3nr3p0](/work/0p3nr3p0) will be on display at the MCA Chicago in conjunction with [Nick Briz](http://nickbriz.com)'s curation of glitch workx from the interwebs. [*More information*](http://www2.mcachicago.org/event/glitch-art-ftp-share-fest/)
 
-## <a href="http://0p3nr3p0.net/" class="fontawesome-external-link">0P3NR3P0</a>
+## <a href="http://0p3nr3p0.net/">0P3NR3P0 <i class="icon-external-link"></i></a>
 
 <iframe src="http://www.0p3nr3p0.net" height="1000"></iframe>
