--- a/works/0p3nr3p0.markdown
+++ b/works/0p3nr3p0.markdown
@@ -2,6 +2,7 @@ Title: 0P3NR3P0
 Date: Wed, 05 Dec 2012 02:43:19 GMT
 Keywords: collab, website, irl
 Link: http://0p3nr3p0.net
+Github: https://github.com/yyolk/0P3NR3P0
 
 An alpha republic repository of [glitch] art worx.
 
