--- a/works/20111113-354pm.markdown
+++ b/works/20111113-354pm.markdown
@@ -4,7 +4,7 @@ Keywords: video
 
 20111113-354pm
 
-<iframe src="http://player.vimeo.com/video/32522317?byline=0&amp;portrait=0&amp;color=ffffff" width="1280" height="800" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+<iframe src="//player.vimeo.com/video/32522317?byline=0&amp;portrait=0&amp;color=ffffff" width="1280" height="800" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
 
 #Featured
 
